<resources>
    <string name="app_name">Boat Log</string>

    <string name="Settings">Settings</string>
    <string name="developed">Developed by S Lovejoy</string>
    <string name="splashTitle">Boat Log</string>

    <string name="name_backup">SQLiteBoatLog.db</string>

    <string name="BoatLog">Boat Log</string>
    <string name="FabNewEntry">Create New Entry</string>
    <string name="FabNewTrip">Create New Trip</string>
    <string name="FabNewManLog">Create New Entry</string>
    <string name="FabNewWaypoints">Create New Waypoints</string>
    <string name="FabDelete">Delete</string>
    <string name="FabSave">Save</string>
    <string name="About">About</string>
    <string name="Tutorial">Tutorial</string>
    <string name="Home">Home</string>
    <string name="surname">Surname</string>
    <string name="developedby">Developed by</string>
    <string name="usefullinks">Useful links</string>
    <string name="stevelovejoy">Steve Lovejoy</string>
    <string name="General">General</string>
    <string name="version">Version: Alpha</string>
    <string name="name">Name</string>
    <string name="destination">Destination</string>

    <string name="create_entry">Create New Entry</string>
    <string name="create_trip">Create New Trip</string>
    <string name="create_waypoint">Create New Waypoint</string>
    <string name="no_gps">No Gps</string>

    <string name="drive_info">
        This can be useful if you have multiple devices.\n
        1: Backup after entering data on one device (Phone) \n
        2: Restore on your other device (tablet).\n
        Also never lose that valuable data again.
    </string>

    <string name="yes">Confirm</string>
    <string name="no">Cancel</string>

    <string name="change_city">Change city</string>

    <!-- Put your own APP ID here -->
    <string name="open_weather_maps_app_id">641cc2423fd5c5ed715a35362fe1ff73</string>


    <string name="place_not_found">Sorry, no weather data found.</string>

    <string name="progress_prompt">Prompt</string>

    <string-array name="progress_array">
        <item>Not Started</item>
        <item>In Progress</item>
        <item>Completed</item>
    </string-array>

    <string name="mm">mm</string>
    <string name="ms">m/s</string>
    <string name="c">°C</string>
    <string name="hPa">hPa</string>
    <string name="fresh">fresh</string>
    <string name="arrow">arrow</string>

    <string name="degree_celsius">°C</string>
    <string name="degree_fahrenheit">°F</string>
    <string name="degree">%s</string>


    <string name="action_search">Search</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="later">Later</string>

    <string name="wind">Wind</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>

    <string name="last_update">Last update:\n%s</string>
    <string name="last_update_widget">\nLast update: %s</string>

    <string name="search_title">Search for city</string>

    <string name="downloading_data">Downloading your data </string>
    <string name="getting_location">Getting your location </string>

    <string name="error_dateFormat">DATE FORMAT ERROR</string>

    <string name="setting_dateFormat">Date Format</string>
    <string name="setting_dateFormatCustom">Custom Date Format</string>
    <string name="setting_dateFormatCustom_summary">Provide the custom SimpleDateFormat string to be used</string>
    <string name="setting_lengthUnits">Length units</string>
    <string name="setting_speedUnits">Speed units</string>
    <string name="setting_tempUnits">Temperature units</string>
    <string name="setting_showTempAsInteger">Show temperature only as an integer</string>
    <string name="setting_pressureUnits">Pressure units</string>
    <string name="setting_theme">Theme</string>
    <string name="setting_auto_detect_location">Detect Location</string>
    <string name="setting_differentiateDaysByTint">Differentiate Days with Color</string>
    <string name="setting_refreshInterval">Background refresh interval</string>
    <string name="setting_unit_mps">Meters per second (m/s)</string>
    <string name="setting_unit_kph">Kilometers per hour (kph)</string>
    <string name="setting_unit_mph">Miles per hour (mph)</string>
    <string name="setting_unit_bft">Beaufort wind scale (bft)</string>
    <string name="setting_unit_kn">Knots (kn)</string>
    <string name="setting_wind_direction_format">Wind direction format</string>
    <string name="settings_none">None</string>
    <string name="setting_apiKey">API key</string>
    <string name="setting_apiKey_summary">Custom API key for OpenWeatherMap queries</string>

    <string name="setting_unit_Celsuis">Celsius</string>
    <string name="setting_unit_Fahrenheit">Fahrenheit</string>
    <string name="setting_unit_Kelvin">Kelvin</string>

    <string name="setting_unit_mm">Millimeters (mm)</string>
    <string name="setting_unit_in">Inches (in)</string>

    <string name="setting_unit_hpa">hPa</string>
    <string name="setting_unit_kpa">kPa</string>
    <string name="setting_unit_mmhg">mm Hg</string>
    <string name="setting_unit_inhg">in Hg</string>

    <string name="speed_unit_mps">m/s</string>
    <string name="speed_unit_kph">kph</string>
    <string name="speed_unit_mph">mph</string>
    <string name="speed_unit_kn">kn</string>

    <string name="wind_direction_format_none">No indication</string>
    <string name="wind_direction_format_arrows">Arrows</string>
    <string name="wind_direction_format_abbreviations">Abbreviations</string>

    <string name="pressure_unit_hpa">hPa</string>
    <string name="pressure_unit_kpa">kPa</string>
    <string name="pressure_unit_mmhg">mm Hg</string>

    <string name="setting_theme_fresh">Fresh</string>
    <string name="setting_theme_classic">Classic</string>
    <string name="setting_theme_dark">Fresh Dark</string>
    <string name="setting_theme_classic_dark">Classic Dark</string>

    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>

    <string name="msg_err_parsing_json">Error parsing JSON.</string>
    <string name="msg_connection_problem">There is a problem with your internet connection.</string>
    <string name="msg_connection_not_available">Connection not available.</string>
    <string name="msg_city_not_found">Specified city is not found.</string>

    <string name="weather_sunny" translatable="false">&#xf00d;</string>
    <string name="weather_clear_night" translatable="false">&#xf02e;</string>
    <string name="weather_foggy" translatable="false">&#xf014;</string>
    <string name="weather_cloudy" translatable="false">&#xf013;</string>
    <string name="weather_rainy" translatable="false">&#xf019;</string>
    <string name="weather_snowy" translatable="false">&#xf01b;</string>
    <string name="weather_thunder" translatable="false">&#xf01e;</string>
    <string name="weather_drizzle" translatable="false">&#xf01c;</string>

    <string name="wind_direction_north">N</string>
    <string name="wind_direction_north_north_east">NNE</string>
    <string name="wind_direction_north_east">NE</string>
    <string name="wind_direction_east_north_east">ENE</string>
    <string name="wind_direction_east">E</string>
    <string name="wind_direction_east_south_east">ESE</string>
    <string name="wind_direction_south_east">SE</string>
    <string name="wind_direction_south_south_east">SSE</string>
    <string name="wind_direction_south">S</string>
    <string name="wind_direction_south_south_west">SSW</string>
    <string name="wind_direction_south_west">SW</string>
    <string name="wind_direction_west_south_west">WSW</string>
    <string name="wind_direction_west">W</string>
    <string name="wind_direction_west_north_west">WNW</string>
    <string name="wind_direction_north_west">NW</string>
    <string name="wind_direction_north_north_west">NNW</string>
    <string name="msg_too_many_requests">Too many requests. Please try again.</string>

    <!-- 1: temperature; 2: unit -->
    <string name="dash_clock_status">%1$s%2$s</string>
    <!-- 1: temperature; 2: unit; 3: weather description -->
    <string name="dash_clock_expanded_title">%1$s%2$s - %3$s</string>
    <!-- 1: city; 2: country; 3: wind; 4: speed units; 5: pressure; 6: pressure units; 7: humidity -->
    <string name="dash_clock_expanded_body">%1$s, %2$s\nWind: %3$s %4$s\nPressure: %5$s %6$s\nHumidity: %7$s %%\n</string>
    <string name="settings_title_units">Units</string>
    <string name="settings_title_display">Display</string>
    <string name="settings_title_data">Data</string>
    <string name="setting_displayDecimalZeroes">Display decimal zeroes</string>
    <string name="settings_title_location">Location</string>
    <string name="setting_update_location_automatically">Update location in background</string>

    <string name="location_settings">Location Settings</string>
    <string name="location_settings_message">Location is not enabled. Do you wish to go to the settings menu?</string>
    <string name="location_settings_button">Settings</string>
    <string name="action_weather_map">Weather Map</string>
    <string name="rain">Rain</string>
    <string name="temperature">Temperature</string>
    <string name="action_graphs">Graphs</string>

</resources>
