<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.WeatherMainActivity">
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh_white_24dp"
        android:title="@string/action_refresh"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_location"
        android:title="@string/setting_auto_detect_location"
        android:icon="@drawable/ic_location_on_white_24dp"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_graphs"
        android:title="@string/action_graphs"
        android:icon="@drawable/ic_show_chart_white_24dp"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_magnify_white_24dp"
        android:title="@string/action_search"/>
    <item
        android:id="@+id/action_map"
        android:icon="@drawable/ic_map_white_24dp"
        android:title="@string/action_weather_map" />
    <item
        android:id="@+id/action_about"
        android:title="@string/action_about" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings" />
</menu>
