<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home_weather"
            android:icon="@drawable/ic_action_menu"
            android:title="Weather Forecast" />
    </group>

    <item android:title="Functions">
        <menu>
            <item
                android:id="@+id/action_refresh"
                android:icon="@drawable/ic_refresh_white_24dp"
                android:title="@string/action_refresh"/>
            <item
                android:id="@+id/action_location"
                android:icon="@drawable/ic_location_on_white_24dp"
                android:title="@string/setting_auto_detect_location" />
            <item
                android:id="@+id/action_graphs"
                android:icon="@drawable/ic_show_chart_white_24dp"
                android:title="@string/action_graphs" />
            <item
                android:id="@+id/action_map"
                android:icon="@drawable/ic_map_white_24dp"
                android:title="@string/action_weather_map" />
            <item
                android:id="@+id/action_search"
                android:icon="@drawable/ic_magnify_white_24dp"
                android:title="@string/action_search"/>
        </menu>
    </item>

    <item android:title="General">
        <menu>
            <item
                android:id="@+id/action_about"
                android:icon="@drawable/ic_help_outline_white_24dp"
                android:title="@string/action_about" />
            <item
                android:id="@+id/action_settings"
                android:icon="@drawable/ic_settings_white_24dp"
                android:title="Weather Settings" />
        </menu>
    </item>

    <item android:title="@string/General">
        <menu>

        </menu>
    </item>

</menu>