<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_gps_fixed"
            android:title="GoTo Waypoint" />
    </group>

    <item android:title="Functions">
        <menu>
            <item
                android:id="@+id/nav_night_switch"
                app:actionLayout="@layout/action_view_switch"
                android:icon="@drawable/ic_remove_red_eye_white_48dp"
                android:title="NightMode" />
            <item
                android:id="@+id/nav_screen_on_switch"
                app:actionLayout="@layout/action_view_switch"
                android:icon="@drawable/ic_tablet_android"
                android:title="ScreenOn" />
        </menu>
    </item>

    <item android:title="@string/General">
        <menu>
            <item
                android:id="@+id/nav_tutorial"
                android:icon="@drawable/ic_videocam"
                android:title="@string/Tutorial" />

            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_help_outline_white_48dp"
                android:title="@string/About" />

            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/Settings" />
        </menu>
    </item>

</menu>