<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item

            android:id="@+id/nav_home"
            android:icon="@drawable/ic_action_menu"
            android:title="@string/Home" />

    </group>



    <item android:title="@string/General">
        <menu>
            <item
                android:id="@+id/nav_night_switch"
                app:actionLayout="@layout/action_view_switch"
                android:icon="@drawable/ic_cast_dark"
                android:title="NightMode" />
            <item
                android:id="@+id/nav_screen_on_switch"
                app:actionLayout="@layout/action_view_switch"
                android:icon="@drawable/ic_tv_light"
                android:title="ScreenOn" />
            <item
                android:id="@+id/nav_tutorial"
                android:icon="@drawable/ic_drawer_help"
                android:title="@string/Tutorial"
                />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_drawer_about"
                android:title="@string/About" />

            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_drawer_settings"
                android:title="@string/Settings" />

        </menu>
    </item>

    <item android:title="Advanced">
        <menu>
            <item
                android:id="@+id/nav_backup"
                android:icon="@drawable/ic_save_black_24dp"
                android:title="Backup Data"
                />

            <item
                android:id="@+id/nav_restore"
                android:icon="@drawable/ic_save_black_24dp"

                android:title="Restore Data"
                />

        </menu>
    </item>

</menu>