<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_gps_fixed"
            android:title="Navigation Log" />
    </group>

    <item android:title="Functions">
        <menu>
            <item
                android:id="@+id/nav_night_switch"
                app:actionLayout="@layout/action_view_switch"
                android:icon="@drawable/ic_remove_red_eye_white_48dp"
                android:title="NightMode" />
            <item
                android:id="@+id/nav_screen_on_switch"
                app:actionLayout="@layout/action_view_switch"
                android:icon="@drawable/ic_tablet_android"
                android:title="ScreenOn" />
        </menu>
    </item>

    <item android:title="@string/General">
        <menu>
            <item
                android:id="@+id/nav_tutorial"
                android:icon="@drawable/ic_videocam"
                android:title="@string/Tutorial" />

            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_help"
                android:title="@string/About" />

            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/Settings" />
        </menu>
    </item>

</menu>