<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSplashBackground"
    android:orientation="vertical"
    tools:context="com.lovejoy777.boatlog.Splash">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ll1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:baselineAligned="true"
        android:layout_height="0dp"
        android:layout_weight="4">

        <TextView
            android:id="@+id/textViewTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:text="@string/splashTitle"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="?attr/colorLightTextPrimary"
            android:textStyle="italic"
            android:typeface="serif"
            android:layout_weight="0.6"
            android:textSize="40sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="152dp"
            android:layout_height="124dp"
            android:layout_weight="3"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:src="@mipmap/ic_launcher" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ll2"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:baselineAligned="true"
        android:layout_height="0dp">


        <TextView
            android:id="@+id/textViewBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/developed"
            android:textColor="?attr/colorLightTextPrimary"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/version"
            android:textColor="?attr/colorLightTextPrimary"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

</LinearLayout>