<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MRL1"
    android:background="?attr/colorBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar4"
        android:layout_height="160dp"
        android:layout_width="match_parent"
        android:minHeight="?android:attr/actionBarSize"
        android:background="?android:attr/colorPrimary"
        android:gravity="bottom"
        tools:context="com.lovejoy777.boatlog.activities.AboutActivity" >
    </android.support.v7.widget.Toolbar>


    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/imVie_AppLogo"
        android:src="@mipmap/ic_launcher"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:elevation="5dp"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/tv_AppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BoatLog"
        android:textColor="?attr/colorLightTextPrimary"
        android:layout_below="@+id/imVie_AppLogo"
        android:layout_centerHorizontal="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:layout_marginTop="8dp"
        android:elevation="5dp" />

    <TextView
        android:id="@+id/tv_Version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:layout_below="@+id/tv_AppName"
        android:layout_centerHorizontal="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="?attr/colorLightTextPrimary" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_height="match_parent"
        android:layout_width="fill_parent"
        android:layout_below="@+id/toolbar4"
        android:background="?attr/colorBackground" >

        <RelativeLayout
            android:id="@+id/RL1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingTop="0dp"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/developedby"
                android:id="@+id/tv_caption1"
                android:layout_alignParentStart="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="?attr/colorTextPrimary"
                android:layout_marginTop="16dp" />

            <ListView
                android:id="@+id/listView_Developer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_alignParentStart="true"
                android:elevation="1dp"
                android:layout_below="@+id/tv_caption1" />

            <View
                android:id="@+id/divider1"
                android:layout_width="fill_parent"
                android:layout_height="1.0dip"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:layout_centerHorizontal="true"
                android:background="?attr/colorDivider"
                android:layout_marginTop="16dp"
                android:layout_below="@+id/listView_Developer1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usefullinks"
                android:id="@+id/tv_caption2"
                android:layout_alignParentStart="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="?attr/colorTextPrimary"
                android:layout_marginTop="16dp"
                android:layout_below="@+id/divider1" />

            <ListView
                android:id="@+id/listView_link1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_below="@+id/tv_caption2"
                android:layout_alignParentStart="true"
                android:elevation="1dp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0dip"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:layout_centerHorizontal="true"
                android:background="?attr/colorDivider"
                android:layout_marginTop="16dp"
                android:layout_below="@+id/listView_link1" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>